Release CMTK-2.3.0:

(r4662) Fixed: check whether FFTW libraries were found rather than relying on
        CMTK_USE_FFTW option being set.
(r4654) Added: N-CANDA script for creating GRE field maps using FSL/prelude
(r4652) Fixed: OpenMP problems using VisualStudio
(r4648) Fixed: configuration problem with CMake 2.8.10 due to changed path to
        CMakeSystem.cmake file.
(r4622) Added: N-CANDA structural pipeline in "contrib/ncanda/"
(r4595) Added: more channels of the SRI24 atlas added to the CMTK
        repository. The atlas is also now installed and packaged with the
        toolkit.
(r4586) Added: Otsu thresholding now integrated into "mrbias" tool.


Release CMTK-2.2.6 (2012-10-29):

(r4573) Fixed: DICOM stacker segfaulted
(r4571) Updated: NrrdIO has been updated to current upstream code base from 
	https://teem.svn.sourceforge.net/svnroot/teem/NrrdIO/trunk
(r4562) Fixed: center of mass was not computed properly if Inf or NaN data
        were present in the image.


Release CMTK-2.2.5 (2012-10-22):

(r4551) Added: "dcm2image" tool can now substitute components of the input
        image paths into generated output images - "%0" represents the input
        file name (for the first image in a multi-file stack), "%1" through
        "%9" the hierarchical directories in order of decreasing depth, i.e.,
        from deepest to highest. 
(r4529) Added: image type (magnitude, real, phase) can now be extracted from
        Siemens DICOM files.
(r4527) Fixed: incorrect image origin was previously computed for Siemens
        mosaic DICOM images (Issue #6754).
(r4522) Added: more DICOM information is now put into the dcm2image-generated
        XML files, such as MR imaging frequency; study, series, and
        frame-of-reference UIDs; device serial number; and intensity rescale
        intercept and slope values. Also gave all tags with values straight
        from the DICOM tags a "dicom:" XML namespace prefix.