@@ -2,7 +2,7 @@
 //
 //  Copyright 1997-2009 Torsten Rohlfing
 //
-//  Copyright 2004-2012 SRI International
+//  Copyright 2004-2013 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -79,7 +79,7 @@ doMain ( const int argc, const char* argv[] )
     {
     cmtk::AffineXform::SmartPtr initialAffine = splineWarpXform->GetInitialAffineXform();
 
-    splineWarpXform->ReplaceInitialAffine( cmtk::AffineXform::SmartPtr( new cmtk::AffineXform ) );
+    splineWarpXform->ReplaceInitialAffine();
 
     if ( (Fractional >= 0) && (Fractional <= 1) )
       {
