@@ -2,7 +2,7 @@
 //
 //  Copyright 1997-2009 Torsten Rohlfing
 //
-//  Copyright 2004-2011 SRI International
+//  Copyright 2004-2011, 2013 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -241,7 +241,7 @@ doMain( const int argc, const char* argv[] )
     cmtk::SplineWarpXform::SmartPtr referenceWarp = vWarpXform[0];
     for ( size_t i = 0; i < vWarpXform.size(); ++i )
       {
-      vWarpXform[i]->ReplaceInitialAffine( NULL );
+      vWarpXform[i]->ReplaceInitialAffine();
       }
     
     const size_t nWarpParameters = vWarpXform[0]->m_NumberOfParameters;
