@@ -1,5 +1,5 @@
 ##
-##  Copyright 2004-2012 SRI International
+##  Copyright 2004-2013 SRI International
 ##
 ##  Copyright 1997-2011 Torsten Rohlfing
 ##
@@ -210,6 +210,10 @@ LIST(APPEND testList
   average_imagesStDev
   average_imagesEntropy
   average_imagesZScore)
+
+# ==========================================
+# Tests for "convert_warp" tool
+LIST(APPEND testList convert_warpFractional convert_warpDeformation)
 
 # ==========================================
 # Tests for "convertx" tool
