@@ -1,5 +1,8 @@
 Release CMTK-2.3.0:
 
+(r4670) Fixed: an error in WarpXform::ReplaceInitialAffine broke
+        convert_warp tool, specifically the computation of a fractional
+        transformation. New test cases have also been added to cover this.
 (r4662) Fixed: check whether FFTW libraries were found rather than relying on
         CMTK_USE_FFTW option being set.
 (r4654) Added: N-CANDA script for creating GRE field maps using FSL/prelude
